removed date header from chat

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -27,7 +27,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_above="@+id/separation_line"
-        android:layout_below="@+id/top_date_header"
+        android:layout_below="@id/chat_fragment_toolbar"
         android:clipChildren="false">
 
         <android.support.v7.widget.RecyclerView
@@ -36,12 +36,13 @@
             android:layout_height="match_parent"
             android:clipChildren="false"
             android:clipToPadding="false"
+            android:paddingTop="16dp"
             android:paddingBottom="16dp"
             android:scrollbars="none"
         />
     </FrameLayout>
 
-    <include
+   <!-- <include
         android:id="@+id/top_date_header"
         layout="@layout/fragment_chat_list_item_date_header"
         android:layout_width="match_parent"
@@ -51,7 +52,7 @@
         android:visibility="gone"
 
     />
-
+-->
     <View
         android:id="@id/separation_line"
         android:layout_width="match_parent"
