--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -18,6 +18,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/colorPrimary"
+            app:titleMarginStart="16dp"
             android:elevation="4dp"
             android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
