--- a/app/src/main/res/layout/fragment_chat_list_item_you.xml
+++ b/app/src/main/res/layout/fragment_chat_list_item_you.xml
@@ -12,8 +12,9 @@
 
     <LinearLayout
         android:layout_width="150dp"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:layout_alignTop="@+id/message_content"
+        android:layout_alignBottom="@id/message_content"
         android:layout_marginLeft="-150dp"
         android:layout_toLeftOf="@+id/profile_image"
         android:gravity="center_vertical|end">
@@ -21,7 +22,7 @@
         <TextView
             android:id="@+id/chat_user_time"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:gravity="end|center_vertical"
             android:text="3:00AM"
             android:textColor="@color/seperator_color"
