--- a/app/src/main/res/layout/fragment_chat_settings_add_user.xml
+++ b/app/src/main/res/layout/fragment_chat_settings_add_user.xml
@@ -28,6 +28,7 @@
         android:lines="1"
         android:textSize="16sp"
         android:paddingLeft="16dp"
+        android:textColor="@color/eighty_black"
         tools:text="fdsf sfsdf sf dsffdsf sfsdf sf dsffdsf sfs"
         android:gravity="center_vertical" />
 
