--- a/app/src/main/res/layout/fragment_sign_up_email.xml
+++ b/app/src/main/res/layout/fragment_sign_up_email.xml
@@ -65,7 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/activity_horizontal_margin"
-        android:hint="Password for Tapt"
+        android:hint="Create a Tapt password"
         android:imeOptions="actionDone"
         android:inputType="textPassword"
         android:lines="1"
