--- a/app/src/main/res/layout/activity_new_post_create.xml
+++ b/app/src/main/res/layout/activity_new_post_create.xml
@@ -60,14 +60,13 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
             android:background="@null"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:hint="Enter your text here"
             android:imeOptions="actionDone"
             android:inputType="textMultiLine|textCapSentences"
             android:maxLines="8"
             android:textColor="#000000"
             android:textSize="28sp"
-            android:textStyle="italic"
             tools:text="HELLO THEREHELLO THEREHELLO THEREHELLO THERE "
         />
 
@@ -80,11 +79,10 @@
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:maxLines="8"
             android:textColor="#000000"
             android:textSize="28sp"
-            android:textStyle="italic"
             android:visibility="gone"
         />
 
@@ -247,7 +245,6 @@
         android:orientation="horizontal"
         android:weightSum="2"
     >
-
 
         <LinearLayout
             android:layout_width="0px"
