removed placeholder icon for blocking in dm

--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -219,14 +219,14 @@
                 android:background="?attr/selectableItemBackground"
                 android:orientation="horizontal"
 
-                android:paddingStart="16dp">
+                >
 
-                <ImageView
+                <!--<ImageView
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_gravity="center_vertical"
                     android:padding="8dp"
-                    android:src="@drawable/ic_notification_bell_blue" />
+                    android:src="@drawable/ic_notification_bell_blue" />-->
 
                 <TextView
                     android:layout_width="0dp"
