--- a/app/src/main/res/layout/fragment_chat_settings.xml
+++ b/app/src/main/res/layout/fragment_chat_settings.xml
@@ -63,7 +63,6 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toEndOf="@id/dm_user_icon"
-                android:phoneNumber="true"
                 android:text="User Name"
                 android:textColor="@color/grey_color"
                 android:textSize="16sp" />
@@ -233,10 +232,11 @@
                     android:layout_height="48dp"
                     android:layout_weight="1"
                     android:gravity="center_vertical"
-                    android:paddingStart="16dp"
+                    android:paddingStart="24dp"
                     android:text="Block"
-                    android:textColor="@color/eighty_black"
-                    android:textSize="16sp" />
+                    android:textColor="@color/red"
+                    android:textSize="16sp"
+                    />
 
             </LinearLayout>
 
