--- a/app/src/main/res/layout/list_header.xml
+++ b/app/src/main/res/layout/list_header.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="48dp"
+    android:layout_height="24dp"
     android:orientation="vertical">
 
     <TextView
@@ -11,5 +11,5 @@
         android:layout_height="match_parent"
         android:layout_marginLeft="16dp"
         android:gravity="center_vertical"
-        tools:text="SEAG ME"/>
+        tools:text="HELP ME"/>
 </LinearLayout>
