--- a/app/src/main/res/layout/fragment_sign_up_college.xml
+++ b/app/src/main/res/layout/fragment_sign_up_college.xml
@@ -18,7 +18,7 @@
         android:textStyle="bold"
     />
 
-    <com.linute.linute.UtilsAndHelpers.NoSuggestionEditText
+    <EditText
         android:id="@+id/search"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
