--- a/app/src/main/res/layout/fragment_updates_item_cells.xml
+++ b/app/src/main/res/layout/fragment_updates_item_cells.xml
@@ -12,12 +12,14 @@
                  android:layout_margin="@dimen/activity_horizontal_margin"
     >
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/updatesFragment_profile_picture"
             android:layout_width="@dimen/profile_image_radius"
             android:layout_height="@dimen/profile_image_radius"
-            app:civ_border_color="@color/seperator_color"
-            app:civ_border_width="1dp"
+            android:scaleType="centerCrop"
+            app:riv_border_color="@color/seperator_color"
+            app:riv_border_width="1dp"
+            app:riv_corner_radius="@dimen/user_icon_corner_radius"
             tools:background="@android:color/darker_gray"
         />
 
@@ -32,10 +34,10 @@
     </FrameLayout>
 
     <LinearLayout android:layout_width="0px"
-                  android:layout_weight="1"
                   android:layout_height="wrap_content"
-                  android:layout_marginTop="@dimen/activity_horizontal_margin"
                   android:layout_marginBottom="@dimen/activity_horizontal_margin"
+                  android:layout_marginTop="@dimen/activity_horizontal_margin"
+                  android:layout_weight="1"
                   android:orientation="vertical">
 
 
