--- a/app/src/main/res/layout/dialog_edit_text.xml
+++ b/app/src/main/res/layout/dialog_edit_text.xml
@@ -9,7 +9,8 @@
         android:id="@+id/edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-
+        android:inputType="text"
+        android:imeOptions="actionDone"
         />
 
 </FrameLayout>
