--- a/app/src/main/res/layout/fragment_rooms_list_item.xml
+++ b/app/src/main/res/layout/fragment_rooms_list_item.xml
@@ -17,6 +17,8 @@
         android:cropToPadding="false"
         android:scaleType="centerCrop"
         android:src="@drawable/icon_user"
+        app:riv_border_color="@color/seperator_color"
+        app:riv_border_width="1dp"
         app:riv_corner_radius="@dimen/user_icon_corner_radius"/>
 
     <LinearLayout
@@ -83,9 +85,9 @@
                 android:layout_height="16dp"
                 android:layout_marginStart="16dp"
                 android:padding="@dimen/activity_horizontal_margin"
-                android:src="@drawable/ic_chat_muted"
                 android:scaleType="centerInside"
                 android:scaleX="-1"
+                android:src="@drawable/ic_chat_muted"
                 android:visibility="visible"/>
 
 
