--- a/app/src/main/res/layout/fragment_updates.xml
+++ b/app/src/main/res/layout/fragment_updates.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent">
 
 
-    <android.support.design.widget.AppBarLayout android:id="@+id/appbar_layout"
-                                                android:layout_width="match_parent"
-                                                android:layout_height="wrap_content"
-                                                app:elevation="4dp"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:elevation="4dp"
     >
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
@@ -21,17 +22,18 @@
         />
     </android.support.design.widget.AppBarLayout>
 
-    <TextView android:id="@+id/empty_view"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:layout_marginEnd="@dimen/activity_horizontal_margin"
-              android:layout_marginStart="@dimen/activity_horizontal_margin"
-              android:layout_marginTop="150dp"
-              android:drawablePadding="@dimen/activity_horizontal_margin"
-              android:drawableTop="@drawable/no_updates"
-              android:gravity="center"
-              android:text="@string/updates_no_updates"
-              android:visibility="gone"
+    <TextView
+        android:id="@+id/empty_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/activity_horizontal_margin"
+        android:layout_marginStart="@dimen/activity_horizontal_margin"
+        android:layout_marginTop="150dp"
+        android:drawablePadding="@dimen/activity_horizontal_margin"
+        android:drawableTop="@drawable/no_updates"
+        android:gravity="center"
+        android:text="@string/updates_no_updates"
+        android:visibility="gone"
     />
 
     <android.support.v4.widget.SwipeRefreshLayout
