--- a/app/src/main/res/layout/square_camera_edit_save.xml
+++ b/app/src/main/res/layout/square_camera_edit_save.xml
@@ -39,7 +39,7 @@
                 android:id="@+id/textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="120dp"
+                android:layout_marginTop="150dp"
                 android:background="#96000000"
                 android:gravity="center"
                 android:lines="1"
@@ -56,7 +56,7 @@
         android:id="@+id/editFragment_title_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="150dp"
         android:background="#96000000"
         android:gravity="center"
         android:imeOptions="actionDone"
@@ -66,7 +66,8 @@
         android:paddingTop="8dp"
         android:textColor="@android:color/white"
         android:textSize="14sp"
-        android:visibility="gone"/>
+        android:visibility="gone"
+    />
 
 
     <FrameLayout
