--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -19,7 +19,7 @@
     <color name="fifty_black">#80000000</color>
     <color name="eighty_black">#CC000000</color>
     <color name="twentyfive_black">#40000000</color>
-    <color name="user_name_blue">#17607d</color>
+    <color name="user_name_blue">#4f80b4</color>
 
     <color name="messanger_blue">#009eea</color>
     <color name="messanger_blue_dark">#0592d6</color>
