--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,25 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout android:id="@+id/mainActivity_drawerLayout"
-                                        xmlns:android="http://schemas.android.com/apk/res/android"
-                                        xmlns:app="http://schemas.android.com/apk/res-auto"
-                                        android:layout_width="match_parent"
-                                        android:layout_height="match_parent">
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/mainActivity_drawerLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
 
     <FrameLayout
         android:id="@+id/mainActivity_fragment_holder"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent" />
 
 
-    <android.support.design.widget.NavigationView android:id="@+id/mainActivity_navigation_view"
-                                                  android:layout_width="wrap_content"
-                                                  android:layout_height="match_parent"
-                                                  android:layout_gravity="start"
-                                                  android:background="@color/colorPrimary"
-                                                  app:headerLayout="@layout/drawer_header"
-                                                  app:itemIconTint="@color/white"
-                                                  app:itemTextAppearance="@style/NavDrawerTextStyle"
-                                                  app:menu="@menu/main_activity_drawer"/>
+    <android.support.design.widget.NavigationView
+        android:id="@+id/mainActivity_navigation_view"
+        android:layout_width="340dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:background="@color/colorSubPrimary"
+        app:headerLayout="@layout/drawer_header"
+        app:itemIconTint="@color/white"
+        app:itemTextAppearance="@style/NavDrawerTextStyle"
+        app:menu="@menu/main_activity_drawer"
+        />
 
 </android.support.v4.widget.DrawerLayout>
