--- a/app/src/main/res/layout/fragment_profile2.xml
+++ b/app/src/main/res/layout/fragment_profile2.xml
@@ -28,7 +28,7 @@
     <android.support.v7.widget.Toolbar android:id="@+id/toolbar"
                                        android:layout_width="match_parent"
                                        android:layout_height="?android:attr/actionBarSize"
-                                       android:background="@color/toolbar_color"
+                                       android:background="@color/colorPrimary"
                                        app:titleTextColor="@color/pure_white"
                                        android:elevation="4dp"/>
 
