--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#142029</color>
+    <color name="colorPrimary">#173856</color>
     <color name="secondaryColor">#67CDC9</color>
 
 
     <color name="red">#FB284C</color>
 
-    <color name="toolbar_color">#142029</color>
-    <color name="colorPrimaryDark">#0f181e</color>
+
+
+    <color name="status_bar_color">#173856</color>
+    <color name="colorPrimaryDark">#122c44</color>
+    <color name="colorSubPrimary">#22486a</color>
     <color name="colorAccent">#1d4261</color>
     <color name="light_grey">#d3d3d3</color>
 
