--- a/app/src/main/res/layout/fragment_discover_holder.xml
+++ b/app/src/main/res/layout/fragment_discover_holder.xml
@@ -22,6 +22,15 @@
             app:navigationIcon="@drawable/ic_action_navigation_close"
             app:title="Campus"
         />
+        <android.support.design.widget.TabLayout
+            android:id="@+id/discover_sliding_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabBackground="@color/colorPrimary"
+            app:tabIndicatorColor="@color/white"
+            app:tabSelectedTextColor="@color/white"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
+            app:tabTextColor="@color/white"/>
 
     </android.support.design.widget.AppBarLayout>
 
@@ -33,23 +42,16 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
     >
 
-        <!--note: hack for time being. elevation on Tablayout doesn't work -->
+      <!--  &lt;!&ndash;note: hack for time being. elevation on Tablayout doesn't work &ndash;&gt;
         <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:elevation="4dp">
 
-            <android.support.design.widget.TabLayout
-                android:id="@+id/discover_sliding_tabs"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:tabBackground="@color/colorPrimary"
-                app:tabIndicatorColor="@color/white"
-                app:tabSelectedTextColor="@color/white"
-                app:tabTextColor="@color/white"/>
+
 
         </android.support.design.widget.AppBarLayout>
-
+-->
         <android.support.v4.view.ViewPager
             android:id="@+id/discover_hostViewPager"
             android:layout_width="match_parent"
