added new fab, linked actions. Status and Upload do not work

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#173856</color>
-    <color name="secondaryColor">#67CDC9</color>
+    <color name="secondaryColor">#52b9f4</color>
 
 
     <color name="red">#FB284C</color>
