--- a/app/src/main/res/layout/fragment_discover_holder.xml
+++ b/app/src/main/res/layout/fragment_discover_holder.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,8 +9,8 @@
         android:id="@+id/appbar_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:elevation="0dp"
-    >
+        app:elevation="0dp">
+
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
@@ -20,17 +19,17 @@
             android:theme="@style/ThemeOverlay.AppCompat.Dark"
             app:layout_scrollFlags="scroll|enterAlways|snap"
             app:navigationIcon="@drawable/ic_action_navigation_close"
-            app:title="Campus"
-        />
+            app:title="Campus" />
+
         <android.support.design.widget.TabLayout
             android:id="@+id/discover_sliding_tabs"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_scrollFlags="scroll|enterAlways|snap"
             app:tabBackground="@color/colorPrimary"
             app:tabIndicatorColor="@color/white"
             app:tabSelectedTextColor="@color/white"
-            app:layout_scrollFlags="scroll|enterAlways|snap"
-            app:tabTextColor="@color/white"/>
+            app:tabTextColor="@color/white" />
 
     </android.support.design.widget.AppBarLayout>
 
@@ -39,34 +38,73 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    >
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-      <!--  &lt;!&ndash;note: hack for time being. elevation on Tablayout doesn't work &ndash;&gt;
-        <android.support.design.widget.AppBarLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:elevation="4dp">
-
+        <!--  &lt;!&ndash;note: hack for time being. elevation on Tablayout doesn't work &ndash;&gt;
+          <android.support.design.widget.AppBarLayout
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              app:elevation="4dp">
 
 
-        </android.support.design.widget.AppBarLayout>
--->
+
+          </android.support.design.widget.AppBarLayout>
+  -->
         <android.support.v4.view.ViewPager
             android:id="@+id/discover_hostViewPager"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent" />
     </LinearLayout>
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
+    <com.getbase.floatingactionbutton.FloatingActionsMenu
+        android:id="@+id/right_labels"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/activity_horizontal_margin"
-        android:scaleType="center"
-        android:src="@drawable/ic_content_add"
-    />
+        android:layout_margin="16dp"
+        app:fab_addButtonColorNormal="@color/secondaryColor"
+        app:fab_addButtonPlusIconColor="@color/pure_white">
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/white"
+            app:fab_colorPressed="@color/white_pressed"
+            app:fab_size="mini"
+            />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_upload"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/white"
+            app:fab_colorPressed="@color/white_pressed"
+            app:fab_size="mini"
+            app:fab_icon="@drawable/ic_image_black_24dp"
+            />
+
+        <com.getbase.floatingactionbutton.FloatingActionButton
+            android:id="@+id/fab_camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:fab_colorNormal="@color/white"
+            app:fab_colorPressed="@color/white_pressed"
+            app:fab_icon="@drawable/ic_photo_camera_black_24dp"
+            app:fab_size="mini"
+            />
+
+
+    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+    <!-- <android.support.design.widget.FloatingActionButton
+         android:id="@+id/fab"
+         android:layout_width="wrap_content"
+         android:layout_height="wrap_content"
+         android:layout_gravity="bottom|end"
+         android:layout_margin="@dimen/activity_horizontal_margin"
+         android:scaleType="center"
+         android:src="@drawable/ic_content_add"
+     />-->
 
 </android.support.design.widget.CoordinatorLayout>
